# pylogger

./: .gitignore  README.md  pyproject.toml
examples/: example_v1_0_1.py  example_v1_2_0.py
pylogger/: __init__.py  consts.py  exceptions.py  loggers.py
